test/iteCondError.slq

def foo[n:!ℕ](const x:uint[n],b:uint[n])qfree{
	f:=(b:uint[n]){
		a:=if x[0] then () else (); /// error
		return b;
	};
	return (f,b);
}
